<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_account_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgavartar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar_default" />

        <TextView
            android:textColor="#636363"
            android:id="@+id/tvemail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bgredtlogin"
            android:hint="@string/update_account_email"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="20dp" />

        <EditText
            android:gravity="center_vertical"
            android:id="@+id/edtusername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bgredtlogin"
            android:hint="@string/update_account_username"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="1dp" />
        <Button
            android:id="@+id/btnupdate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/green"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:text="@string/update_account_btn_update" />
    </LinearLayout>
</LinearLayout>