<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAF9F9"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/green">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgacc"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_above="@id/tvusername"
                android:layout_marginStart="20dp"
                android:src="@drawable/avatar_default" />

            <TextView
                android:id="@+id/tvusername"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvemail"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLength="60"
                android:maxLines="1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnsignup"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bgr_btn_signup_profile"
                android:gravity="center"
                android:text="@string/profiler_fragment_btn_sign_up"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnlogin"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toStartOf="@id/btnsignup"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/profiler_fragment_btn_sign_in"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rloder"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imgyo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/imgyo"
                    android:gravity="center_vertical"
                    android:text="@string/profiler_fragment_tv_purchases_history" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlfavorite"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/icfavorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/icfavorite"
                    android:gravity="center_vertical"
                    android:text="@string/profiler_fragment_tv_favorite" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/profiler_fragment_tv_account_title"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/rlmyprofile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/icmyprofile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_account_box_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/icmyprofile"
                    android:gravity="center_vertical"
                    android:text="@string/profiler_fragment_tv_change_profile" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlchangepass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/icchange"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_lock_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/icchange"
                    android:gravity="center_vertical"
                    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                    android:text="@string/profiler_fragment_tv_change_pass" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnlogout"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/profiler_fragment_btn_log_out"
                android:textColor="@color/red_color" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>