<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/cart_fragment_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvproduct_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/rcamount"
                android:background="@color/smoke_color" />
            <TextView
                android:id="@+id/tvcartisempty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cart_fragment_isempty"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_centerInParent="true"
                android:layout_above="@id/rcamount"
                />

            <RelativeLayout
                android:id="@+id/rcamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/lnpayment"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tvamounttitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cart_fragment_amount"
                    android:textColor="#D52020"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#D52020"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/lnpayment"
                android:layout_marginBottom="15dp"
                android:layout_alignParentBottom="true"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

        <TextView
            android:id="@+id/tvpayment"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/border_button_cart"
            android:layout_width="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_height="40dp"
            android:text="Payment"
            android:layout_marginRight="35dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</layout>