<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_detail_tv_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/order_detail_tv_delivery_Address"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvinfo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvname"
            android:layout_marginStart="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvphone"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/list_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rltotal"
            android:layout_below="@+id/tvaddress"
            android:layout_marginTop="15dp" />

        <RelativeLayout
            android:id="@+id/rltotal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/red_color"
                android:text="@string/order_detail_tv_total_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtotall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:textColor="@color/red_color"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
